# ImageDPO

./: .gitignore  .pre-commit-config.yaml  README.md  corrupt_image.py  generate_main_llava.py  pyproject.toml  vlm_data_generator.py
scripts/test_scripts/: image_gen.sh
vilp/image_util/: image_corrupt.py  semantic_corrupt.py
vilp/model_tool/: __init__.py  groundingDINO.py  instructpix2pix.py  sdxl.py
vilp/model_warper/: ground_sam.py  intructp2p_warper.py  vlm_warper.py
vilp/model_wrapper/: ground_sam.py  intructp2p_wrapper.py  llava_wrapper.py  vlm_wrapper.py
vilp/utils/: image_utils.py  io_utils.py  re_utils.py
